log
Wed 20 Mar 2024 06:16:27 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:28: error: expected statement before ‘)’ token
   47 |   for (i = 1; i <= 10; i++)) {
      |                            ^
exercises.c:47:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   47 |   for (i = 1; i <= 10; i++)) {
      |   ^~~
exercises.c:47:30: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   47 |   for (i = 1; i <= 10; i++)) {
      |                              ^
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, &i);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
70477e1
Wed 20 Mar 2024 06:16:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, &i);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
1af8259
Wed 20 Mar 2024 06:17:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
90d5372
Wed 20 Mar 2024 06:18:54 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e0d0091
Wed 20 Mar 2024 06:20:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2dab13a
Wed 20 Mar 2024 06:28:41 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
2dc11ad
Wed 20 Mar 2024 06:30:05 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:10: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   47 |   for (i = 1; i <= 10; i++) {
      |          ^
exercises.c:47:17: error: comparison between pointer and integer [-Werror]
   47 |   for (i = 1; i <= 10; i++) {
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
5cfb2a9
Wed 20 Mar 2024 06:30:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 30/70
c17f4f4
Wed 20 Mar 2024 06:34:39 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|3
total_score: 30/70
7031c0b
Wed 20 Mar 2024 06:36:11 PM UTC: 
 exercises.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  0|0
8d912ea
Wed 20 Mar 2024 06:37:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
ba1d67e
Wed 20 Mar 2024 06:41:28 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
a7c5c6f
Wed 20 Mar 2024 06:51:00 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
4c22a1a
Wed 20 Mar 2024 06:57:28 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:10: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  103 |   while (dato = pop(P3)) {
      |          ^~~~
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:116:22: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  116 |   char *dato = first(cadena);
      |                      ^~~~~~
      |                      |
      |                      char *
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:10:19: note: expected ‘List *’ but argument is of type ‘char *’
   10 | void* first(List *L);
      |             ~~~~~~^
In file included from test.c:5:
exercises.c:116:9: error: unused variable ‘dato’ [-Werror=unused-variable]
  116 |   char *dato = first(cadena);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
92ec903
Wed 20 Mar 2024 06:58:47 PM UTC: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|2
total_score: 40/70
7a795a8
Wed 20 Mar 2024 07:05:31 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
42a2c98
Wed 20 Mar 2024 08:20:11 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
de90400
Wed 20 Mar 2024 08:20:41 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
c57d828
Wed 20 Mar 2024 08:25:40 PM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:118:16: error: array subscript is not an integer
  118 |   while (cadena[i] != '\0') {
      |                ^
exercises.c:119:22: error: array subscript is not an integer
  119 |     push(pila, cadena[i]);
      |                      ^
exercises.c:122:1: error: control reaches end of non-void function [-Werror=return-type]
  122 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8b30103
Wed 20 Mar 2024 08:33:37 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:120:9: error: unused variable ‘dato’ [-Werror=unused-variable]
  120 |   void *dato = top(pila);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
a70ec26
Wed 20 Mar 2024 08:33:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
dcbbefc
Wed 20 Mar 2024 08:50:23 PM UTC: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  5|1
total_score: 50/70
dc48e36
Wed 20 Mar 2024 09:02:18 PM UTC: 
 exercises.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  4|1
total_score: 50/70
cbb0323
Wed 20 Mar 2024 09:06:16 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
02c9f47
